# maison

./: Cargo.toml  README.md  build.rs
htdocs/: index.html  landing.html  main.js  maison.css  package.json  webpack.config.js
proto/: maison.proto  persistent.proto
src/: api.rs  autogarden.rs  autokitchen.rs  boiler.rs  daylight.rs  grpcweb.rs  heat.rs  hotwater.rs  lights.rs  main.rs  mqtt.rs  parse.rs  schedule.rs  state.rs  thermostat.rs
