[package]
name = "maison"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
comprehensive = "0.9.1"
comprehensive_grpc = { version = "0.9.2", features = ["tls"] }
comprehensive_http = { version = "0.5.0", features = ["tls"] }
comprehensive_spiffe = "0.4.1"
futures-util = "0.3.31"
prost = "0.14.3"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.18"
tonic = "0.14.3"
tonic-prost = "0.14.3"
tonic-web = "0.14.2"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
