[package]
name = "maison"
version = "0.1.0"
edition = "2024"

[dependencies]
backoff = "0.4.0"
bytes = "1.11.1"
chrono = "0.4.44"
clap = { version = "4.5", features = ["derive"] }
comprehensive = "0.9.1"
comprehensive_grpc = { version = "0.9.2", features = ["tls"] }
comprehensive_http = { version = "0.5.0", features = ["tls"] }
comprehensive_spiffe = "0.4.1"
futures = "0.3.31"
futures-util = "0.3.31"
humantime = "2.3.0"
merge-streams = "0.1.2"
pin-project-lite = "0.2.16"
prost = "0.14.3"
prost-types = "0.14.3"
protobuf = "4.34.0-rc.2"
protobuf-well-known-types = "4.34.0-rc.2"
rumqttc = "0.25.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sunrise = "3.0.0"
thiserror = "2.0.18"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.18"
tonic = "0.14.3"
tonic-prost = "0.14.3"
tonic-web = "0.14.2"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tzfile = "0.1.3"
uuid = "1.20.0"
weak-table = "0.3.2"

[build-dependencies]
protobuf-codegen = "4.34.0-rc.2"
protobuf-well-known-types = "4.34.0-rc.2"
tonic-prost-build = "0.14.2"
